syntax = "proto3";

package tripPackage;

service TripService {
  rpc Ping (PingRequest) returns (PingResponse);

}

// dummy data to run the service
message PingRequest {}
message PingResponse {
  string message = 1;
}
